wip homepage design standards

--- a/app/assets/stylesheets/login_bar.css
+++ b/app/assets/stylesheets/login_bar.css
@@ -39,9 +39,8 @@ nav.seasons{
   width: 50%;
 }
 
-.welcome{
+/*.welcome{
   width: 100%;
   height: 100vh;
-  background: url("main-wallpaper.jpg") no-repeat center center fixed;
   background-size: cover;
-}
+}*/
