--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,11 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-  <body class="<%= "welcome" if controller_name == "seasons" %>">
-      <%= render "shared/login_bar" %>
+  <!-- <body class="<%= "welcome" if controller_name == "seasons" %>">
+      <%= render "shared/login_bar" %> -->
+  <body>
     <main>
+      <%= render "shared/login_bar" %>
       <%= yield %>
     </main>
   </body>
