--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <h1><a href="/">Seattle <span>Sautee</span></a></h1>
+  <h1><a href="/">Sautee' Seattle</a></h1>
   <nav class="seasons">
     <ul>
       <li><a href="/seasons/Spring">Spring</a></li>
