--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -15,10 +15,11 @@
         <li><%= link_to "register", new_user_path %></li>
       <% else %>
         <li><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete %></li>
+
         <% if current_page?(user_path(User.find(session[:user_id]))) %>
           <li>Hello <%= User.find(session[:user_id]).username %></li>
         <% else %>
-          <li><%= link_to "See Profile", user_path(User.find(session[:user_id])) %></li>
+          <li><%= link_to "My Profile", user_path(User.find(session[:user_id])) %></li>
         <% end %>
       <% end %>
     </ul>
