styled register button

--- a/app/assets/stylesheets/user_new.scss
+++ b/app/assets/stylesheets/user_new.scss
@@ -1,27 +1,42 @@
 #users-new {
   #new-user-form {
-    width: 70%;
+    width: 60%;
     margin: 0 auto;
 
     h1 {
       font-size: 2em;
     }
 
-    input {
-      display: inline-block;
+    form{
+
+      .label {
+        font-family: 'elliotsixregular';
+        margin-top: 20px;
+        font-size: 1.25em;
+      }
+
+      input {
+        width: 100%;
+        height: 30px;
+
+        &[type='submit'] {
+          margin-top: 20px;
+          border: 2px white solid;
+          color: white;
+          font-size: 1.25em;
+          background: var(--lalala);
+          font-family: 'elliotsixregular';
+        }
+      }
     }
 
-    .label {
-      font-size: 1.5em;
-      font-family: 'elliotsixregular';
-    }
+
 
     textarea {
       display: block;
       width: 390px;
       height: 50px;
       margin: 0 auto;
-      // margin-top: 1.25em;
     }
   }
 }
