Resized bio textarea

--- a/app/assets/stylesheets/user_new.scss
+++ b/app/assets/stylesheets/user_new.scss
@@ -30,12 +30,10 @@
       }
     }
 
-
-
     textarea {
       display: block;
-      width: 390px;
-      height: 50px;
+      width: 100%;
+      height: 200px;
       margin: 0 auto;
     }
   }
