Colored all links white

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -3,10 +3,8 @@
     border-radius: 50%;
   }
 
-  .bottom .left-content ul{
-    list-style: none;
-    li {
-      margin-left: 0px;
-    }
+  a:link, a:visited {
+    text-decoration: none;
+    color: white;
   }
 }
