Better font sizes

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -3,6 +3,18 @@
     border-radius: 50%;
   }
 
+  h2 {
+    font-size: 1.75em;
+  }
+
+  h3 {
+    font-size: 1.25em;
+  }
+
+  li, p {
+    font-size: 1.2em;
+  }
+
   a:link, a:visited {
     text-decoration: none;
     color: white;
