--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -12,7 +12,7 @@
           <li><%= link_to location.title, location.url %></li>
         <% end %>
       </ul>
-    <% if @locations.length > 5 %>
+    <% if @ingredient.locations.length > 5 %>
       <span class="see-more">
         <%= link_to "More places to go...", ingredient_locations_path(@ingredient) %>
       </span>
@@ -59,7 +59,7 @@
         <% end %>
       </ul>
 
-      <% if @recipes.length > 5 %>
+      <% if @ingredient.recipes.length > 5 %>
         <span class="see-more">
           <%= link_to "More recipes...", ingredient_posts_path(@ingredient) %>
         </span>
