removes post routes -- fixes paths in ingredient#show

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -38,7 +38,7 @@
           </p>
 
           <span>
-            <%= link_to "Add a Location", new_ingredient_post_location_path(@ingredient, @post = session[:user_id]) %>
+            <%= link_to "Add a Location", new_ingredient_location_path(@ingredient) %>
           </span>
 
           <span>
@@ -61,7 +61,7 @@
 
       <% if @ingredient.recipes.length > 5 %>
         <span class="see-more">
-          <%= link_to "More recipes...", ingredient_posts_path(@ingredient) %>
+          <%= link_to "More recipes...", ingredient_recipes_path(@ingredient) %>
         </span>
       <% end %>
     </aside>
