--- a/app/assets/stylesheets/login_bar.css
+++ b/app/assets/stylesheets/login_bar.css
@@ -3,28 +3,45 @@ header {
   --main-nav-bg-color: #343a40;
   --main-nav-li-hover-bg-color: black;
 }
-header{
+
+header {
   line-height: 50px;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr
+  grid-template-columns: 1fr 3fr 1fr;
+  height: 40px;
 }
-header ul{
+
+header ul {
   display: grid;
   list-style:none;
 }
-header li{
+
+header li {
   grid-row: 1;
   font-family: 'elliotsixregular';
+  margin-top: 2em;
 }
-header a{
+
+header a {
   text-decoration: none;
   color: var(--main-link-color);
 }
-header h1{
+
+header h1 {
+  font-size: 1em;
   margin: 0;
+  margin-top: 2em;
+  padding-left: 2.55em;
 }
-header h1 span{
-  color: lime;
+
+header a:link,
+header a:visited {
+  color: #fff;
+}
+
+header a:hover,
+header a:focus {
+  color: gray;
 }
 
 .welcome header {
@@ -32,11 +49,41 @@ header h1 span{
 }
 
 header {
-  background-color: var(--main-nav-li-hover-bg-color);
+  background-color: var(--lalala);
 }
-nav.seasons{
-  margin: 0 auto;
+
+nav.seasons {
+  margin-left: 40em;
   width: 50%;
+}
+
+.login-nav {
+  text-align: center;
+}
+
+.season a {
+  display: block;
+}
+
+.seasons a:link,
+.seasons a:visited {
+  color: #fff
+}
+
+.seasons a:hover,
+.seasons a:focus {
+  transition: .2s;
+  font-size: 1.75em;
+}
+
+span a {
+  font-family: 'elliotsixregular';
+  color: #fff
+}
+
+input {
+  font-family: 'arapeyregular';
+  font-size: 1.2em;
 }
 
 /*.welcome{
