Different fonts for 'Contributed By'

--- a/app/assets/stylesheets/recipe_show.scss
+++ b/app/assets/stylesheets/recipe_show.scss
@@ -5,9 +5,14 @@
       margin-bottom: 10px;
     }
 
-    h3 > a {
-      color: gold;
-      text-decoration: none;
+    h3 {
+      font-family: 'arapeyregular';
+
+      a {
+        color: gold;
+        text-decoration: none;
+        font-family: 'arapeyitalic';
+      }
     }
   }
 
