add new validations for Post to difrentiate recipe and location attributes

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -12,10 +12,16 @@
         <%= f.text_field :title %>
       </div>
       <div>
-        <label>URL</label>
+        <label>Address</label>
       </div>
       <div>
         <%= f.text_field :body %>
+      </div>
+      <div>
+        <label>URL</label>
+      </div>
+      <div>
+        <%= f.text_field :url %>
       </div>
       <div>
         <%= f.submit "Submit" %>
