--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -68,6 +68,10 @@ h1, h2, h3 {
   margin-top: 4em;
 }
 
+.round-image {
+  border-radius: 50%;
+}
+
 main {
   width: 100%;
   background-color: var(--lalala);
