--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,15 @@
 <section id="users-new">
   <article id="new-user-form">
     <h1>Create an Account!</h1>
-    <%= render 'shared/errors' %>
 
     <%= form_for @user, html: { class: 'form' } do |f| %>
+    <%= render "shared/errors", object: @recipe %>
+    
       <div class="label">
         <label>Name</label>
       </div>
       <div>
-        <%= f.text_field :username, required: true %>
+        <%= f.text_field :username, required: true, autofocus: true %>
       </div>
       <div class="label">
         <label>Email</label>
