--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
       <h3>Recently Posted Locations</h3>
       <ul>
         <% @user.locations[0..5].each do |location| %>
-          <li><%= location.title %></li>
+          <li><%= link_to location.title, "http://#{location.url}", target: '_blank' %></li>
         <% end %>
       </ul>
     </aside>
