Added more spacing between season titles

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -28,6 +28,10 @@
     margin-bottom: 10px;
   }
 
+  .season-name {
+    margin-left: 3px;
+  }
+
   .see-more {
     margin-top: 10px;
     display: inline-block;
