Added green hover styling to recipes and locations

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -4,6 +4,9 @@
 
     li:hover {
       color: var(--green);
+      a {
+        color: var(--green);
+      }
     }
   }
 
@@ -15,10 +18,6 @@
     color: white;
     text-decoration: none;
     padding: 2px;
-
-    &:hover {
-      color: var(--green);
-    }
   }
 
   .bottom .contribute span {
