--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,29 @@
-<section id="users-new">
-  <article id="new-user-form">
-    <h1>Create an Account!</h1>
-
+<section class="global-form-style">
+  <h1>Create an Account!</h1>
+  <aside>
     <%= form_for @user, html: { class: 'form' } do |f| %>
-    <%= render "shared/errors" %>
+      <%= render "shared/errors" %>
 
       <div class="label">
-        <label>Name</label>
+        <label><h3>Name<h3></label>
       </div>
       <div>
         <%= f.text_field :username, required: true, autofocus: true %>
       </div>
       <div class="label">
-        <label>Email</label>
+        <label><h3>Email</h3></label>
       </div>
       <div>
         <%= f.email_field :email, required: true %>
       </div>
       <div class="label">
-        <label>Password</label>
+        <label><h3>Password</h3></label>
       </div>
       <div>
         <%= f.password_field :password, required: true %>
       </div>
       <div class="label">
-        <label>Bio</label>
+        <label><h3>Bio</h3></label>
       </div>
       <div>
         <%= f.text_area :bio %>
@@ -33,5 +32,5 @@
         <%= f.submit 'Register' %>
       </div>
     <% end %>
-  </article>
+  </aside>
 </section>
