added form and textarea to inherit font family and size

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -115,6 +115,11 @@ span {
   font-family: 'arapeyitalic';
 }
 
+form textarea{
+  font-family: inherit;
+  font-size: inherit;
+}
+
 #manifesto h2 {
   text-align: center;
 }
