added footer_bar css and html.erb

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -115,9 +115,13 @@ span {
   font-family: 'arapeyitalic';
 }
 
-form textarea{
+form textarea {
   font-family: inherit;
   font-size: inherit;
+}
+
+input {
+
 }
 
 #manifesto h2 {
