--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <%= render "shared/login_bar" %>
       <%= render "shared/home-page" %>
       <%= yield %>
+      <%= render "shared/footer_bar" %>
     </main>
   </body>
 </html>
