added border image to footer, created footer, added css file and code

--- a/app/views/shared/_footer_bar.html.erb
+++ b/app/views/shared/_footer_bar.html.erb
@@ -1,3 +1,13 @@
 <footer>
-  <p>Words</p>
+  <div class="footer-image">
+    <%= image_tag "border-schmear.svg" %>
+  </div>
+  <p>SauteeSeattle&copy;</p>
+  <ul>
+    <li>Blaine Anderson</li>
+    <li>Nick Van Deren</li>
+    <li>John Simoni</li>
+    <li>Marlo Ito</li>
+    <li>Hassan Mandil</li>
+  </ul>
 </footer>
