Added image to ingredient page

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -20,6 +20,11 @@
     padding: 2px;
   }
 
+  .top .left-content img {
+    height: 250px;
+    width: 250px;
+  }
+
   .bottom .contribute span {
     display: block;
     text-align: center;
