--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,7 +1,7 @@
 <section id="ingredient-show">
   <article class="top">
     <aside class="left-content">
-      <img class="round-image" src="http://via.placeholder.com/250x250" alt="">
+      <%= image_tag @ingredient.image, class: "round-image", alt: "ingredient-image" %>
     </aside>
 
     <aside class="right-content locations">
