updates image class to updated class

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section id="user-profile">
   <article class="top">
     <aside class="left-content">
-      <%= image_tag @user.image, class: "bio-imground-image", alt: "personal-bio" %>
+      <%= image_tag @user.image, class: "round-image", alt: "personal-bio" %>
     </aside>
 
     <aside class="right-content">
