--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -1,5 +1,9 @@
 <header>
-  <h1><a href="/">Sautee' Seattle</a></h1>
+  <nav class="logo-nav">
+    <ul>
+      <li><a href="/">Sautee' Seattle</a></li>
+    </ul>
+  </nav>
 
   <nav class="seasons">
     <ul>
