--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -27,6 +27,11 @@
 
 
 /* START Show Seasons */
+.seasons-show-header h1 {
+  font-size: 2.5em;
+  margin-top: 3.5em;
+}
+
 .seasons-show-header p {
   padding: 0em 1.25em;
 }
