Changed logo on root to be 'Select Season'

--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -1,5 +1,11 @@
 <header>
-  <h1><a href="/">Sautee' Seattle</a></h1>
+  <h1><a href="/">
+    <% if request.path == "/" %>
+      Select Season
+    <% else %>
+      Sautee' Seattle
+    <% end %>
+  </a></h1>
 
   <nav class="seasons">
     <ul>
