--- a/app/assets/stylesheets/recipes_posts_index.scss
+++ b/app/assets/stylesheets/recipes_posts_index.scss
@@ -1,5 +1,11 @@
 #recipes-posts-index {
   text-align: center;
+
+  h1 {
+    font-size: 2.5em;
+    margin-top: 3.5em;
+  }
+  
   .recipe-list {
     text-align: left;
     ul {
