--- a/app/assets/stylesheets/recipes_posts_index.scss
+++ b/app/assets/stylesheets/recipes_posts_index.scss
@@ -5,7 +5,11 @@
     font-size: 2.5em;
     margin-top: 3.5em;
   }
-  
+
+  h2 {
+    font-size: 2em;
+  }
+
   .recipe-list {
     text-align: left;
     ul {
