--- a/app/assets/stylesheets/recipes_posts_index.scss
+++ b/app/assets/stylesheets/recipes_posts_index.scss
@@ -16,11 +16,19 @@
       list-style: none;
       li {
         margin-left: 0px;
-        border: medium white solid;
+        border: 2px var(--lalala) solid;
+
+        a {
+          color: white;
+          text-decoration: none;
+        }
 
         &:hover {
-          border: medium green solid;
-          color: green;
+          border: 2px green solid;
+
+          a {
+            color: green;
+          }
         }
       }
     }
