--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -16,14 +16,12 @@
   <nav class="login-nav">
     <ul>
       <% unless session[:user_id] %>
-        <li><%= link_to "login", login_path %> | <%= link_to "register", new_user_path %></li>
+        <li class="spot1-login"><%= link_to "login", login_path %> | </li> <li class="spot2"><%= link_to "register", new_user_path %></li>
       <% else %>
-        <li><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete, id: 'logout' %></li>
-
         <% if current_page?(user_path(User.find(session[:user_id]))) %>
-          <li>Hello <%= User.find(session[:user_id]).username %></li>
+          <li class="spot1">Hello <%= User.find(session[:user_id]).username %> | </li> <li class="spot2"><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete, id: 'logout' %></li>
         <% else %>
-          <li><%= link_to "My Profile", user_path(User.find(session[:user_id])) %></li>
+           <li class="spot1"><%= link_to "My Profile", user_path(User.find(session[:user_id])) %> | </li> <li class="spot2"><%= button_to "logout", { action: 'destroy', controller: 'sessions' }, method: :delete, id: 'logout' %></li>
         <% end %>
       <% end %>
     </ul>
