--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -55,11 +55,12 @@
   font-family: 'elliotsixregular';
   margin-left: 0px;
   border: 2px var(--lalala) solid;
-  padding: 20px 0px 20px 10px;
+  padding: 1em 0 1em 10px;
+  margin: 1em 0 1em 0;
 }
 
 .season-ingredient-partial-cell > a {
-  font-size: 1em;
+  font-size: 1.4em;
   text-decoration: none;
   color: var(--main-link-color);
 }
