Link spans box width

--- a/app/views/seasons/_season_ingredient.html.erb
+++ b/app/views/seasons/_season_ingredient.html.erb
@@ -1,6 +1,8 @@
   <li class="season-ingredient-partial-cell">
 
     <%= link_to ingredient_path(ingredient) do %>
-      <%= ingredient.name %>
+      <div>
+        <%= ingredient.name %>
+      </div>
     <% end %>
   </li>
