added hover effect to back to top on home page

--- a/app/views/shared/_home-page.html.erb
+++ b/app/views/shared/_home-page.html.erb
@@ -1,6 +1,6 @@
 <% if current_page?(root_path) %>
   <article id="home-page">
-    <h1>Sautee' Seattle</h1>
+    <h1 id="title-page-logo">Sautee' Seattle</h1>
   </article><!-- end home page -->
   <section id="manifesto">
       <aside class="manifesto-header">
@@ -13,7 +13,7 @@
       <aside class="right-content">
         <p>Meditation actually fingerstache man braid iceland gastropub, you probably haven't heard of them hammock shaman gluten-free messenger bag fanny pack readymade. Narwhal intelligentsia brooklyn air plant hoodie blog enamel pin. Sartorial taxidermy vexillologist single-origin coffee listicle synth pok pok selvage truffaut plaid literally art party edison bulb chicharrones. Sartorial tousled cronut tbh. Man braid seitan aesthetic pok pok, kickstarter stumptown yuccie vinyl street art butcher. Jean shorts put a bird on it vegan biodiesel tousled succulents hammock authentic DIY +1. Pinterest franzen post-ironic asymmetrical hammock activated charcoal, palo santo raclette bushwick occupy flannel wayfarers affogato hexagon keytar. Sartorial slow-carb umami locavore drinking vinegar. </p>
 
-        <span> <a href="#top">back to top</a></span>
+        <span> <a href="#top" class="title-back-top">back to top</a></span>
       </aside><!-- end manifesto header -->
   </section><!-- end manifesto -->
 <% end %>
