altered footer and added apostrophy, fixed hover effect on home page to not effect all other pages

--- a/app/assets/stylesheets/seasons-index.css
+++ b/app/assets/stylesheets/seasons-index.css
@@ -24,8 +24,8 @@ article#home-page h1 {
   text-decoration: none;
 }
 
-section a:hover,
-section a:focus {
+span a:hover,
+span a:focus {
   transition: 0.2s;
   font-size: 2em;
 }
