--- a/app/views/shared/_footer_bar.html.erb
+++ b/app/views/shared/_footer_bar.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-image">
     <%= image_tag "border-schmear.svg" %>
   </div>
-  <p>SauteeSeattle&copy;</p>
+  <p>Sautee'Seattle&copy;</p>
   <ul>
     <li>Blaine Anderson</li>
     <li>Nick Van Deren</li>
