--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,13 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <%= javascript_include_tag 'application' %>
   </head>
-  <!-- <body class="<%= "welcome" if controller_name == "seasons" %>">
-      <%= render "shared/login_bar" %> -->
   <body>
-
+    <div id="overlay">
+      <h1>Saut&eacute; Seattle</h1>
+    </div>
     <main>
       <div class="wrapper">
         <%= render "shared/login_bar" %>
