set 300x300 image limitation on ingredients, users and recipe pictures

--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,7 +1,7 @@
 <section id="ingredient-show">
   <article class="top">
     <aside class="left-content">
-      <%= image_tag @ingredient.image, class: "round-image", alt: "ingredient-image" %>
+      <%= image_tag @ingredient.image, size: "300x300", class: "round-image", alt: "ingredient-image" %>
     </aside>
 
     <aside class="right-content locations">
