set user location and recipe links to change color upon hover or focus

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -13,10 +13,18 @@
 
   li, p {
     font-size: 1.2em;
+    text-decoration: none;
+    list-style: none;
   }
 
   a:link, a:visited {
     text-decoration: none;
     color: white;
   }
+
+  a:hover, a:focus {
+    text-decoration: none;
+    color: gray;
+  }
+
 }
