working on page overlay

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <body>
-    <div id="overlay">
+    <!-- <div id="overlay">
       <h1>Saut&eacute; Seattle</h1>
-    </div>
+    </div> -->
     <main>
       <div class="wrapper">
         <%= render "shared/login_bar" %>
