--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -7,6 +7,10 @@
           <h2>Whats on the Menu?</h2>
         </div>
 
+        <div class="schmear-image">
+          <%= image_tag "border-schmear.svg" %>
+        </div>
+
         <div>
             <ul class="season-ingredient-partial-grid">
               <% @season.ingredients.each do |ingredient| %>
