--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,7 +7,7 @@
     </h3>
 
     <h2>Directions</h2>
-    <p><%= raw @recipe.body %></p>
+    <p><%= raw @body %></p>
   </article>
 
   <article class="right-content">
