--- a/app/views/shared/_footer_bar.html.erb
+++ b/app/views/shared/_footer_bar.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-image">
-    <%= image_tag "border-schmear.svg" %>
+    <%= image_tag "border-schmear.svg", height: 20%>
   </div>
   <p>Sautee'Seattle&copy;</p>
   <ul>
