user can delete a location they added from there show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,14 @@
       <h3>Recently Posted Locations</h3>
       <ul>
         <% @user.locations[0..5].each do |location| %>
-          <li><%= link_to location.title, "http://#{location.url}", target: '_blank' %></li>
+          <li>
+            <% if @user.id == session[:user_id] %>
+            <%= link_to 'x', location_path(location), :method => :delete,
+            :class => "btn-delete",
+              data: {confirm: "Are you sure?"} %>
+            <% end %>
+            <%= link_to location.title, "http://#{location.url}", target: '_blank' %>
+          </li>
         <% end %>
       </ul>
     </aside>
