--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,7 @@
         <% @user.locations[0..5].each do |location| %>
           <li>
             <% if @user.id == session[:user_id] %>
-            <%= link_to 'x', location_path(location), :method => :delete,
-            :class => "btn-delete",
-              data: {confirm: "Are you sure?"} %>
+              <%= link_to 'x', location_path(location), :method => :delete, :class => "btn-delete", data: {confirm: "Are you sure?"} %>
             <% end %>
             <%= link_to location.title, "http://#{location.url}", target: '_blank' %>
           </li>
