--- a/app/assets/stylesheets/footer_bar.css
+++ b/app/assets/stylesheets/footer_bar.css
@@ -31,3 +31,18 @@ footer li {
   font-size: 0.5em;
   margin: 0;
 }
+
+footer a {
+  text-decoration: none;
+  color: var(--main-link-color);
+}
+
+footer a:link,
+footer a:visited {
+  color: #fff;
+}
+
+footer a:hover,
+footer a:focus {
+  color: gray;
+}
