--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,10 @@
       <h3>Recently Posted Recipes</h3>
       <ul>
         <% @user.recipes[0..5].each do |recipe| %>
-          <li><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %></li>
+          <li><%= link_to recipe.title, user_recipe_path(recipe.user, recipe) %>
+            <% if @user.id == session[:user_id] %>
+              <%= link_to 'x remove', recipe_path(recipe), :method => :delete, :class => "btn-delete", data: {confirm: "Are you sure?"} %>
+            <% end %></li>
         <% end %>
       </ul>
     </aside>
