--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,24 +10,35 @@
       <div>
         <%= f.text_field :username, required: true, autofocus: true %>
       </div>
+
       <div class="label">
         <label><h3>Email</h3></label>
       </div>
       <div>
         <%= f.email_field :email, required: true %>
       </div>
+
       <div class="label">
         <label><h3>Password</h3></label>
       </div>
       <div>
         <%= f.password_field :password, required: true %>
       </div>
+
+      <div class="label">
+        <label><h3>Profile Picture</h3></label>
+      </div>
+      <div>
+        <%= f.file_field :image %>
+      </div>
+
       <div class="label">
         <label><h3>Bio</h3></label>
       </div>
       <div>
         <%= f.text_area :bio %>
       </div>
+
       <div>
         <%= f.submit 'Register' %>
       </div>
