set margin to 0 to reduce spacing between ingredients on seasons show page:

--- a/app/assets/stylesheets/seasons_show.css
+++ b/app/assets/stylesheets/seasons_show.css
@@ -43,7 +43,7 @@
 }
 
 .schmear-image {
-  
+
 }
 
 /* END Show Seasons */
@@ -60,7 +60,7 @@
   margin-left: 0px;
   border: 2px var(--lalala) solid;
   padding: 1em 0 1em 10px;
-  margin: 1em 0 1em 0;
+  margin: 0;
 }
 
 .season-ingredient-partial-cell > a {
