set font for in-season-during on ingredient show page to be in elliot font and slightly smaller to fit properly

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -10,6 +10,16 @@
     }
   }
 
+  .in-season-during {
+    font-family: 'elliotsixregular';
+    font-size: 0.8em;
+  }
+
+  .season-name {
+    font-size: 0.8em;
+    font-family: 'elliotsixregular';
+  }
+
   h2 {
     font-size: 1.5em;
   }
