altered all li's on ingredient and user show pages to match

--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -1,13 +1,17 @@
+
 #ingredient-show {
   ul {
     margin-top: 10px;
+  }
 
-    li:hover {
-      color: var(--green);
-      a {
-        color: var(--green);
-      }
-    }
+  li {
+    font-size: 1.2em;
+    text-decoration: none;
+  }
+
+  a:hover, a:focus {
+    text-decoration: none;
+    color: gray;
   }
 
   .in-season-during {
