added github repo for SauteeSeattle link to footer

--- a/app/views/shared/_footer_bar.html.erb
+++ b/app/views/shared/_footer_bar.html.erb
@@ -2,7 +2,7 @@
   <div class="footer-image">
     <%= image_tag "border-schmear.svg", height: 20%>
   </div>
-  <p>Sautee'Seattle&copy;</p>
+  <p><a target="_blank" href="https://github.com/Sautee-Seattle/Sautee-Seattle">Sautee'Seattle&copy;</a></p>
   <ul>
     <li><a target="_blank" href="https://github.com/BlaineA97">Blaine Anderson</a></li>
     <li><a target="_blank" href="https://github.com/Nickvanderen">Nick Van Deren</a></li>
